# LifeManager

./: .gitignore  CMakeLists.txt  run.txt  tareas.txt
doc/: API.md  CAMBIOS.md  README.md  USUARIO.md
include/: Entreno.h  Gasto.h  Gestor.h  GestorEntrenos.h  GestorGastos.h  GestorTareas.h  Shell.h  Tarea.h
src/: Entreno.cpp  Gasto.cpp  GestorEntrenos.cpp  GestorGastos.cpp  GestorTareas.cpp  Tarea.cpp  main.cpp
